--- a/NewJavaWebProject/src/main/Webapp/WEB-INF/web.xml
+++ b/NewJavaWebProject/src/main/Webapp/WEB-INF/web.xml
@@ -6,10 +6,41 @@
     <!--  将spring容器整合到web容器中  -->
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>classpath:ApplicationConfig.xml</param-value>
+        <param-value>classpath:applicationConfig.xml</param-value>
     </context-param>
+
     <!--  配置监听器  -->
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
+
+    <!--  配置springmvc的核心servlet  -->
+    <servlet>
+        <servlet-name>springmvc</servlet-name>
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <init-param>
+            <!--  springmvc配置文件的位置  -->
+            <param-name>contextConfigLocation</param-name>
+            <param-value>classpath:springmvc-config.xml</param-value>
+        </init-param>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+    <servlet-mapping>
+        <!--  拦截所有请求  -->
+        <servlet-name>springmvc</servlet-name>
+        <url-pattern>/</url-pattern>
+    </servlet-mapping>
+
+    <filter>
+        <filter-name>encoding</filter-name>
+        <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+        <init-param>
+            <param-name>encoding</param-name>
+            <param-value>UTF-8</param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>encoding</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 </web-app>
